force-app/main/default/objects/Permission_Set_Assignment__e/Permission_Set_Assignment__e.object-meta.xml
<CustomObject>
    <description>For triggering Permission Set Assignment on Customer Community Users.</description>
    <label>Permission Set Assignment</label>
    <pluralLabel>Permission Set Assignments</pluralLabel>
</CustomObject>