force-app/main/default/objects/Permission_Set_Assignment__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Tells us to Add or Remove the Permission Set on the User</description>
    <label>Action</label>
    <length>10</length>
    <type>Text</type>
</CustomField>