force-app/main/default/objects/Permission_Set_Assignment__e/fields/Permission_Set_Id__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Id__c</fullName>
    <description>ID of the Permission Set to Add/Remove</description>
    <label>Permission Set Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>