force-app/main/default/objects/Permission_Set_Assignment__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>User who is receiving the Permission Set</description>
    <label>User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>